# algorithms_and_data_structures

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  appveyor.yml
LinkedList/: CMakeLists.txt  README.md
LinkedList/include/: SinglyLinkedList.hpp  nthToLastNode.hpp
LinkedList/src/: SinglyLinkedList.cpp  addTwoNumbersLists.cpp  nthToLastNode.cpp  swapNodesWithoutSwappingData.cpp
LinkedList/tests/: CMakeLists.txt  testAddTwoNumbersLists.cpp  testNthToLastNode.cpp  testSinglyLinkedList.cpp  testSwapNodesWithoutSwappingData.cpp
cmake/: FindGUnit.cmake
common/: CMakeLists.txt
docs/: Backtracking.md  BitManipulation.md  CommonAndLogic.md  CrackingTheCodingInterview.md  DynamicProgramming.md  Graph.md  Greedy.md  LeetCode.md  LinkedList.md  Math.md  SortAndSearch.md  Stack.md  Strings.md  Trees.md
linked_list_problems/: CMakeLists.txt  addTwoNumbersLists.cpp  addTwoNumbersLists.hpp  cloneListWithRandomPtr.cpp  cloneListWithRandomPtr.hpp  nthToLastNode.cpp  nthToLastNode.hpp
linked_list_problems/tests/: CMakeLists.txt  addTwoNumbersListsTest.cpp  cloneListWithRandomPtrTest.cpp  nthToLastNodeTest.cpp
